--- a/presentation/src/main/res/layout/activity_game_stats_detail.xml
+++ b/presentation/src/main/res/layout/activity_game_stats_detail.xml
@@ -13,7 +13,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/top_layout"
@@ -76,15 +77,17 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout5"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/game_date">
 
             <ScrollView
                 android:id="@+id/scrollView2"
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
+                android:fillViewport="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -99,6 +102,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="30dp"
+                        android:background="@drawable/recycler_bottom_line"
                         tools:ignore="MissingConstraints">
 
                         <TextView
@@ -167,7 +171,7 @@
                         android:id="@+id/basic_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
+                        android:background="@drawable/recycler_bottom_line"
                         app:layout_constraintTop_toBottomOf="@id/game_layout"
                         tools:layout_editor_absoluteX="0dp">
 
@@ -219,7 +223,7 @@
                         android:id="@+id/middle_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
+                        android:background="@drawable/recycler_bottom_line"
                         app:layout_constraintTop_toBottomOf="@+id/basic_layout"
                         tools:layout_editor_absoluteX="16dp">
 
@@ -272,7 +276,7 @@
                         android:id="@+id/three_point_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
+                        android:background="@drawable/recycler_bottom_line"
                         app:layout_constraintTop_toBottomOf="@+id/middle_layout"
                         tools:layout_editor_absoluteX="16dp">
 
@@ -325,7 +329,7 @@
                         android:id="@+id/rebound_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
+                        android:background="@drawable/recycler_bottom_line"
                         app:layout_constraintTop_toBottomOf="@+id/three_point_layout"
                         tools:layout_editor_absoluteX="16dp">
 
@@ -377,7 +381,6 @@
                         android:id="@+id/free_throw_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
                         app:layout_constraintTop_toBottomOf="@+id/rebound_layout"
                         tools:layout_editor_absoluteX="16dp">
 
