--- a/presentation/src/main/res/layout/item_game_list.xml
+++ b/presentation/src/main/res/layout/item_game_list.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="@drawable/recycler_bottom_line"
-        android:layout_marginBottom="10dp">
+        android:layout_marginBottom="5dp">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,9 +26,8 @@
 
             <ImageView
                 android:id="@+id/home_team"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginTop="4dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:textColor="@color/black"
                 android:backgroundTint="@color/white"
                 app:imageBinding="@{repo.homeTeam.homeTeamId}"
@@ -40,10 +39,11 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="2dp"
                 android:text="@{repo.homeTeamScore}"
                 android:textColor="@color/black"
                 android:textSize="25sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/home_team"
@@ -53,16 +53,31 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
+            android:id="@+id/game_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:text="@{repo.gameDate}"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="2021.10.20" />
+
+        <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{repo.period}"
+            android:layout_marginBottom="12dp"
+            android:text="@{repo.status}"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/game_date"
             tools:text="Final/OT" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -72,9 +87,8 @@
 
             <ImageView
                 android:id="@+id/visitor_team"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginTop="4dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:textColor="@color/black"
                 android:backgroundTint="@color/white"
                 app:imageBinding="@{repo.visitorTeam.visitorId}"
@@ -87,10 +101,11 @@
                 android:id="@+id/visitor_score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="2dp"
                 android:text="@{repo.visitorTeamScore}"
                 android:textColor="@color/black"
                 android:textSize="25sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/visitor_team"
