--- a/presentation/src/main/res/layout/item_team.xml
+++ b/presentation/src/main/res/layout/item_team.xml
@@ -10,10 +10,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main_item"
         android:background="@drawable/recycler_bottom_line"
-        android:padding="5dp"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginBottom="5dp">
+        android:layout_height="60dp">
 
         <ImageView
             android:id="@+id/imageView"
@@ -42,13 +40,14 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="120dp"
             android:layout_height="match_parent"
-            app:layout_constraintStart_toEndOf="@+id/name">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/name"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/height"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:text="@{repo.city}"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -60,12 +59,13 @@
                 android:id="@+id/weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="4dp"
                 android:text="@{repo.division}"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/height"
                 tools:text="west" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -74,12 +74,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="40dp"
-            android:textColor="@color/black"
+            android:layout_marginBottom="4dp"
             android:text="@{repo.conference}"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Lakers"/>
+            tools:text="Lakers" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
