--- a/presentation/src/main/res/menu/bottom_navi_menu.xml
+++ b/presentation/src/main/res/menu/bottom_navi_menu.xml
@@ -15,6 +15,6 @@
     <item
         android:id="@+id/games_calender"
         android:enabled="true"
-        android:icon="@drawable/team"
+        android:icon="@drawable/ic_baseline_date_range_24"
         android:title="경기 일정"/>
 </menu>
