--- a/presentation/src/main/res/layout/activity_team_game_list.xml
+++ b/presentation/src/main/res/layout/activity_team_game_list.xml
@@ -67,6 +67,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout6"
+            app:layout_constraintVertical_bias="1.0"
             app:recyclerView="@{vm.gameListAdapter}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
