--- a/presentation/src/main/res/layout/item_team.xml
+++ b/presentation/src/main/res/layout/item_team.xml
@@ -31,10 +31,10 @@
             android:id="@+id/imageView"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="60dp"
             app:imageBinding="@{repo.teamId}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -57,9 +57,9 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:textSize="20sp"
+            android:layout_marginStart="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:text="@{repo.win}"
-            app:layout_constraintEnd_toStartOf="@+id/textView5"
             app:layout_constraintStart_toEndOf="@+id/name"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="30" />
@@ -79,7 +79,7 @@
 
         <TextView
             android:id="@+id/textView6"
-            android:layout_width="wrap_content"
+            android:layout_width="55dp"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textColor="@color/black"
